# taskpad

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: FUNDING.yml  changelog-config.json
.github/workflows/: ci.yml  claude-code-review.yml  release.yml  rust-clippy.yml  rust.yml
docs/: roadmap.md
src/: app.rs  main.rs  process.rs  ui.rs
src/tasks/: cargo.rs  invoke.rs  just.rs  make.rs  mod.rs  npm.rs  poe.rs  rake.rs
tests/: README.md
tests/test-cargo/: Cargo.toml
tests/test-invoke/: tasks.py
tests/test-mixed/: justfile
tests/test-npm/: package.json
tests/test-poe/: pyproject.toml
tests/test-rake/: Rakefile
wix/: main.wxs
